@@ -3,12 +3,14 @@ Stable versions
 
 4.0.2 ():
 	- add IT volume column vibrato
+	- add IT pattern row delay effect
 	- add fine global volume slide effect
 	- fix IT instrument vibrato depth and sweep
 	- fix IT past note effects
 	- fix period range for values lower than 8
 	- fix global volume slides
 	- fix channel volume setting
+	- fix multi-retrig effect counter
 
 4.0.1 (20130216):
 	- fix license issues reported by Jan Engelhardt
